# sg

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
sg/: coroutine.cpp  coroutine.hpp  coroutine_test.cpp  coroutine_test.hpp  sg.cpp  sg.hpp  sg_test.cpp
sg/util/: coroutine.cpp  coroutine.hpp  coroutine_magic.hpp  coroutine_unmagic.hpp  maybe.hpp  to_array.cpp  to_array.hpp  traits.hpp  type_name.hpp
